# contracts/requests/user_request.go
@@ -1,0 +1,6 @@
+package requests
+
+// swagger:parameters UserSearchRequest
+type UserSearchRequest struct {
+	*PaginationQuery
+}
